--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<app-contact></app-contact>
+<div fxLayout="row wrap" fxLayoutAlign="center center" class="container">
+  <div fxFlex="25" fxFlex.lt-md="50" fxFlex.lt-sm="100" class="box">
+      Service
+  </div>
+  <div fxFlex="25" fxFlex.lt-md="50" fxFlex.lt-sm="100" class="box">
+      Contact
+  </div>
+  <div fxFlex="25" fxFlex.lt-md="50" fxFlex.lt-sm="100" class="box">
+      Detail
+  </div>
+</div>
+
